# dataflow

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
docs/: graph.md
examples/: CMakeLists.txt  json_example.cpp
examples/graph/: CMakeLists.txt  boost_graph.cpp  boost_graph_topological_sort.cpp  boost_subgraph.cpp
scripts/: build.sh
